--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Blog from '../components/Blog.astro';
 		<Features/>
 		<Nucleus/>
 		<Stats/>
-		<Blog/>
+		<!-- <Blog/> -->
 		<News/>
 	</main>
 </Layout>
