--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -36,7 +36,7 @@ import Container from "./Container.astro";
         </p>
         <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
           <a
-            href="#"
+            href="https://docs.orionis-framework.com/"
             class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-[#134675] before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max gap-2"
           >
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 relative text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
